--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "deepmerge": "4.3.1",
+    "https": "1.0.0",
     "joi": "17.9.2",
     "module-alias": "2.2.3",
     "node-fetch": "3.3.1",
+    "uuid": "9.0.0",
     "with-query": "1.3.0"
   },
   "devDependencies": {
