--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-n": "16.0.1",
-    "eslint-plugin-prettier": "5.0.0-alpha.2",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "6.1.1",
     "lint-staged": "13.2.3",
     "nodemon": "3.0.1",
