chore: reorganize files and variables (Recipes)

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "_moduleAliases": {
     "@modules": "./src/modules",
+    "@recipes": "./src/recipes",
     "@shared": "./src/_shared"
   }
 }
