--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   "scripts": {
     "git:commit": "lint-staged",
     "lint": "eslint ./src --fix",
-    "scrape": "node src/index.js",
-    "scrape:watch": "nodemon --trace-warnings src/index.js"
+    "start:docker": "docker compose up --build",
+    "start:server": "nodemon --trace-warnings src/index.js"
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "deepmerge": "4.3.1",
+    "express": "4.18.2",
+    "flatted": "3.2.7",
     "https": "1.0.0",
+    "ioredis": "5.3.2",
     "joi": "17.9.2",
     "module-alias": "2.2.3",
     "node-fetch": "3.3.1",
+    "node-object-hash": "3.0.0",
     "uuid": "9.0.0",
     "with-query": "1.3.0"
   },
