--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "deepmerge": "4.3.1",
     "express": "4.18.2",
     "flatted": "3.2.7",
+    "html-minifier": "4.0.0",
     "https": "1.0.0",
     "ioredis": "5.3.2",
     "joi": "17.9.2",
+    "jsdom": "22.1.0",
     "module-alias": "2.2.3",
     "node-fetch": "3.3.1",
     "node-object-hash": "3.0.0",
@@ -29,7 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
     "@commitlint/config-conventional": "17.6.6",
-    "eslint": "8.44.0",
+    "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-prettier-standard": "4.0.1",
     "eslint-config-standard": "17.1.0",
@@ -46,6 +48,6 @@
   "_moduleAliases": {
     "@modules": "./src/modules",
     "@recipes": "./src/recipes",
-    "@shared": "./src/_shared"
+    "@shared": "./src/shared"
   }
 }
