--- a/package.json
+++ b/package.json
@@ -13,24 +13,15 @@
     "start:server": "nodemon --trace-warnings src/index.js"
   },
   "dependencies": {
-    "cheerio": "1.0.0-rc.12",
-    "deepmerge": "4.3.1",
     "express": "4.18.2",
-    "flatted": "3.2.7",
-    "html-minifier": "4.0.0",
-    "https": "1.0.0",
     "ioredis": "5.3.2",
-    "joi": "17.9.2",
-    "jsdom": "22.1.0",
     "module-alias": "2.2.3",
-    "node-fetch": "3.3.1",
-    "node-object-hash": "3.0.0",
-    "uuid": "9.0.0",
-    "with-query": "1.3.0"
+    "pino": "8.14.1",
+    "pino-pretty": "10.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.6.6",
-    "@commitlint/config-conventional": "17.6.6",
+    "@commitlint/cli": "17.6.7",
+    "@commitlint/config-conventional": "17.6.7",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-prettier-standard": "4.0.1",
@@ -46,8 +37,6 @@
     "simple-git-hooks": "2.8.1"
   },
   "_moduleAliases": {
-    "@modules": "./src/modules",
-    "@recipes": "./src/recipes",
     "@shared": "./src/shared"
   }
 }
