--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   },
   "dependencies": {
     "express": "4.18.2",
+    "html-minifier": "4.0.0",
+    "https": "1.0.0",
     "ioredis": "5.3.2",
+    "jsdom": "22.1.0",
     "module-alias": "2.2.3",
+    "node-fetch": "3.3.1",
+    "node-object-hash": "3.0.0",
     "pino": "8.14.1",
-    "pino-pretty": "10.0.1"
+    "pino-pretty": "10.0.1",
+    "with-query": "1.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.7",
@@ -37,6 +43,8 @@
     "simple-git-hooks": "2.8.1"
   },
   "_moduleAliases": {
+    "@modules": "./src/modules",
+    "@recipes": "./src/recipes",
     "@shared": "./src/shared"
   }
 }
