--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "start:server": "nodemon --trace-warnings src/index.js"
   },
   "dependencies": {
+    "cheerio": "1.0.0-rc.12",
+    "deep-merge": "1.0.0",
+    "deepmerge": "4.3.1",
     "express": "4.18.2",
     "html-minifier": "4.0.0",
     "https": "1.0.0",
     "ioredis": "5.3.2",
     "jsdom": "22.1.0",
     "module-alias": "2.2.3",
-    "node-fetch": "3.3.1",
+    "node-fetch": "3.3.2",
     "node-object-hash": "3.0.0",
     "pino": "8.14.1",
-    "pino-pretty": "10.1.0",
+    "pino-pretty": "10.2.0",
     "with-query": "1.3.0"
   },
   "devDependencies": {
