--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:server": "nodemon --trace-warnings src/index.js"
   },
   "dependencies": {
+    "bottleneck": "2.19.5",
     "cheerio": "1.0.0-rc.12",
     "deep-merge": "1.0.0",
     "deepmerge": "4.3.1",
@@ -24,18 +25,19 @@
     "module-alias": "2.2.3",
     "node-fetch": "3.3.2",
     "node-object-hash": "3.0.0",
-    "pino": "8.14.1",
+    "pino": "8.14.2",
     "pino-pretty": "10.2.0",
+    "socks-proxy-agent": "8.0.1",
     "with-query": "1.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.7",
     "@commitlint/config-conventional": "17.6.7",
-    "eslint": "8.45.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "8.9.0",
     "eslint-config-prettier-standard": "4.0.1",
     "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "2.28.0",
     "eslint-plugin-n": "16.0.1",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "6.1.1",
