--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pino": "8.14.2",
     "pino-pretty": "10.2.0",
     "socks-proxy-agent": "8.0.1",
+    "user-agents": "1.0.1444",
     "with-query": "1.3.0"
   },
   "devDependencies": {
