--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "bottleneck": "2.19.5",
     "cheerio": "1.0.0-rc.12",
+    "cors": "2.8.5",
     "deep-merge": "1.0.0",
     "deepmerge": "4.3.1",
+    "errorhandler": "1.5.1",
     "express": "4.18.2",
+    "helmet": "7.0.0",
     "html-minifier": "4.0.0",
     "https": "1.0.0",
     "ioredis": "5.3.2",
