--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-object-hash": "3.0.0",
     "pino": "8.14.2",
     "pino-pretty": "10.2.0",
+    "response-time": "2.3.2",
     "socks-proxy-agent": "8.0.1",
     "user-agents": "1.0.1444",
     "with-query": "1.3.0"
