--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-thief-fanmissions-datamanager",
+  "name": "simple-thief-fanmissions-datascraper",
   "description": "A simple and automated tool to crawl, scrape, parse and store Fan Missions data from multiple sources at once",
   "author": "Jonathan Linat <jonathan.linat@gmail.com>",
   "version": "0.1.0",
@@ -7,50 +7,49 @@
   "private": true,
   "main": "src/index.js",
   "scripts": {
-    "git:commit": "lint-staged",
     "lint": "eslint ./src --fix",
     "start:docker": "docker compose up --build",
     "start:server": "nodemon --trace-warnings src/index.js"
   },
   "dependencies": {
-    "bottleneck": "2.19.5",
-    "cheerio": "1.0.0-rc.12",
-    "cors": "2.8.5",
-    "deep-merge": "1.0.0",
-    "deepmerge": "4.3.1",
-    "errorhandler": "1.5.1",
-    "express": "4.18.2",
-    "helmet": "7.0.0",
-    "html-minifier": "4.0.0",
-    "https": "1.0.0",
-    "ioredis": "5.3.2",
-    "jsdom": "22.1.0",
-    "module-alias": "2.2.3",
-    "node-fetch": "3.3.2",
-    "node-object-hash": "3.0.0",
-    "pino": "8.14.2",
-    "pino-pretty": "10.2.0",
-    "response-time": "2.3.2",
-    "socks-proxy-agent": "8.0.1",
-    "user-agents": "1.0.1444",
-    "with-query": "1.3.0"
+    "bottleneck": "^2.19.5",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "deep-merge": "^1.0.0",
+    "deepmerge": "^4.3.1",
+    "errorhandler": "^1.5.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "html-minifier": "^4.0.0",
+    "https": "^1.0.0",
+    "ioredis": "^5.3.2",
+    "jsdom": "^22.1.0",
+    "module-alias": "^2.2.3",
+    "node-fetch": "^3.3.2",
+    "node-object-hash": "^3.0.0",
+    "pino": "^8.15.1",
+    "pino-pretty": "^10.2.0",
+    "response-time": "^2.3.2",
+    "socks-proxy-agent": "^8.0.2",
+    "user-agents": "^1.0.1444",
+    "with-query": "^1.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.6.7",
-    "@commitlint/config-conventional": "17.6.7",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "8.9.0",
-    "eslint-config-prettier-standard": "4.0.1",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-n": "16.0.1",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-promise": "6.1.1",
-    "lint-staged": "13.2.3",
-    "nodemon": "3.0.1",
-    "prettier": "3.0.0",
-    "prettier-config-standard": "5.0.0",
-    "simple-git-hooks": "2.9.0"
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier-standard": "^4.0.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "lint-staged": "^14.0.1",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
+    "prettier-config-standard": "^7.0.0",
+    "simple-git-hooks": "^2.9.0"
   },
   "_moduleAliases": {
     "@recipes": "./src/recipes",
